kornell-tools/src/main/cfn/cfn-vpc.json
{
  "Parameters": {},

  "Resources": {

    "knlvpc": {
      "Type": "AWS::EC2::VPC",
      "Properties": {        
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }
    },

    "knlvpcigw": {
      "Type": "AWS::EC2::InternetGateway"
    },

    "knlvpcigwattach": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        },
        "InternetGatewayId": {
          "Ref": "knlvpcigw"
        }
      }
    },

    "knlpubroutetbl": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        }
      }
    },

    "knlpubroute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "knlvpcigwattach",
      "Properties": {
        "RouteTableId" : { "Ref" : "knlpubroutetbl" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "GatewayId" : { "Ref" : "knlvpcigw" }
      }
    },

    "knldbsubneta": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        },
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": {
          "Fn::Select": [
            0, {
              "Fn::GetAZs": ""
            }
          ]
        }
      }
    },

    "knldbsubnetaroute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "knldbsubneta"
        },
        "RouteTableId": {
          "Ref": "knlpubroutetbl"
        }
      }
    },

    "knldbsubnetb": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        },
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": {
          "Fn::Select": [
            1, {
              "Fn::GetAZs": ""
            }
          ]
        }
      }
    },

    "knldbsubnetbroute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "knldbsubnetb"
        },
        "RouteTableId": {
          "Ref": "knlpubroutetbl"
        }
      }
    },

    "knlapisubneta": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        },
        "CidrBlock": "10.0.10.0/24",
        "AvailabilityZone": {
          "Fn::Select": [
            0, {
              "Fn::GetAZs": ""
            }
          ]
        }
      }
    },

    "knlapisubnetaroute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "knlapisubneta"
        },
        "RouteTableId": {
          "Ref": "knlpubroutetbl"
        }
      }
    },


    "knlapisubnetb": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        },
        "CidrBlock": "10.0.11.0/24",
        "AvailabilityZone": {
          "Fn::Select": [
            1, {
              "Fn::GetAZs": ""
            }
          ]
        }
      }
    },

    "knlapisubnetbroute": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "knlapisubnetb"
        },
        "RouteTableId": {
          "Ref": "knlpubroutetbl"
        }
      }
    },


    "knldbsecgapi": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        },
        "GroupDescription": "Grants access to API instances"
      }
    },

    "knlsecgdevops": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        },
        "GroupDescription": "Grants acces to operators"
      }
    },

    "knlapisecg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "knlvpc"
        },
        "GroupDescription": "Open database for access",
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "8080",
          "ToPort": "8080",
          "CidrIp": "0.0.0.0/0"
        }]
      }
    },

    "knldbsecgapiingress": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306",
        "SourceSecurityGroupId": {
          "Ref": "knlapisecg"
        },
        "GroupId": {
          "Ref": "knldbsecgapi"
        }
      }
    }

  },
  "Outputs": {
    "knlvpcid": {
      "Description": "VPC_ID",
      "Value": {
        "Ref": "knlvpc"
      }
    },

    "knldbsubnetids": {
      "Description": "VPC_DB_SUBNETS",
      "Value": {
        "Fn::Join": [",", [{
          "Ref": "knldbsubneta"
        }, {
          "Ref": "knldbsubnetb"
        }]]
      }
    },

    "knldbsgids": {
      "Description": "VPC_DB_SECGS",
      "Value": {
        "Fn::Join": [",", [{
          "Ref": "knlsecgdevops"
        }, {
          "Ref": "knldbsecgapi"
        }]]
      }
    },

    "knlapisubnetids": {
      "Description": "VPC_API_SUBNETS",
      "Value": {
        "Fn::Join": [",", [{
          "Ref": "knlapisubneta"
        }, {
          "Ref": "knlapisubnetb"
        }]]
      }
    },
    
    "knlapisgids": {
      "Description": "VPC_API_SECGS",
      "Value": {
        "Fn::Join": [",", [{
          "Ref": "knlsecgdevops"
        }, {
          "Ref": "knlapisecg"
        }]]
      }
    }
  }
}
